# Midoku

./: .gitignore  CMakeLists.txt  Midoku.desktop  README.md
src/: CMakeLists.txt  main.cpp  qml.qrc  settings.cpp  settings.h
src/logic/: app.cpp  app.h  error.cpp  error.h  mpris.cpp  mpris.h  player.cpp  player.h
src/mpv/: mpv.cpp  mpv.h  mpv_type.h  mpvframebuffer.cpp  mpvframebuffer.h
src/qml/: LibraryPage.qml  PlayerPage.qml  PopupButton.qml  RealSpinBox.qml  RowPopup.qml  SettingsPage.qml  SleepButton.qml  TimeLabel.qml  main.qml
src/util/: enumerate.h  isobmff.h  orm.h  result.h  tstring.h  tuple.h  tuple_util.h  type_sequence.h
